# gluesql-py

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-python.yml  python.yml
src/: error.rs  lib.rs  payload.rs  storages.rs
