[package]
name = "gluesql-py"
authors = [
    "Gyubong Lee <jopemachine@naver.com>",
    "Taehoon Moon <taehoon.moon@outlook.com>",
]
version = "0.19.0"
edition = "2024"
description = "Python bindings for GlueSQL"
license = "Apache-2.0"
repository = "https://github.com/gluesql/gluesql-py"
documentation = "https://gluesql.org/docs/"
readme = "README.md"

[lib]
name = "gluesql"
crate-type = ["cdylib", "rlib"]

[dependencies]
gluesql-core = "0.19.0"
gluesql-json-storage = "0.19.0"
gluesql-shared-memory-storage = "0.19.0"
gluesql_memory_storage = "0.19.0"
gluesql_sled_storage = "0.19.0"

pyo3 = { version = "0.19.2", features = ["extension-module"] }
pythonize = "0.19.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
serde = "1"
serde_json = "1"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
struct_field_names = "allow"
float_cmp = "allow"
enum_glob_use = "allow"
wildcard_imports = "allow"
