[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"

[project]
name = "gluesql"
dynamic = ["version"]
requires-python = ">=3.10"
description = "GlueSQL is quite sticky. It attaches to anywhere."
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://gluesql.org"
Repository = "https://github.com/gluesql/gluesql-py"
Documentation = "https://gluesql.org/docs/"
